# LearnOpenGL

./: CMakeLists.txt  README.md
libs/: stb_image.h
shaders/: fragment.shader  vertex.shader
src/: Camera.cpp  Camera.h  Cube.cpp  Cube.h  Object.cpp  Object.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  main.cpp  util.h
